--- a/src/styles/addressSearch.module.css
+++ b/src/styles/addressSearch.module.css
@@ -12,12 +12,37 @@
   z-index: 2000;
 }
 
+
+
+/* Кнопка назад */
+.backButton {
+  position: absolute;
+  top: 6vh;
+  left: 4vh;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: #f5f5f5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  cursor: pointer;
+  transition: all 0.3s;
+  
+}
+
+.backButton:hover {
+  background: #e0e0e0;
+}
+
 .modalContent {
   background: white;
   border-radius: 16px;
   width: 90%;
+  height: 90%;
   max-width: 500px;
-  max-height: 80vh;
+  max-height: 100vh;
   overflow: hidden;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
   animation: modalAppear 0.3s ease-out;
