--- a/src/styles/page.module.css
+++ b/src/styles/page.module.css
@@ -673,3 +673,42 @@ a.secondary {
 @keyframes spin {
   to { transform: rotate(360deg); }
 }
+
+
+
+.loadingOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(255, 255, 255, 0.8);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.loadingSpinner {
+  border: 4px solid rgba(0, 0, 0, 0.1);
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  border-left-color: #09f;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+
+.mapOffset {
+  position: absolute;
+  top: 0;
+  bottom: 50%; /* Карта будет занимать верхнюю половину экрана */
+  width: 100%;
+  z-index: 1;
+}
